@@ -92,12 +92,14 @@ int GWEN_XML_ReadBIO(GWEN_XMLNODE *n,
                      GWEN_BUFFEREDIO *bio,
                      unsigned int flags,
                      const char *path,
+                     GWEN_STRINGLIST *sl,
                      GWEN_XML_INCLUDE_FN fn);
 
 
 int GWEN_XML_ReadFileInt(GWEN_XMLNODE *n,
                          const char *path,
                          const char *file,
+                         GWEN_STRINGLIST *sl,
                          unsigned int flags);
 
 
